--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "front-end-interview",
-  "displayName": "front-end-interview",
+  "name": "front-end-daily-question",
+  "displayName": "前端每日一题",
   "description": "A vscode extension for frontEnd Interviewer",
-  "version": "0.0.2",
-  "publisher": "front-end-interview",
+  "version": "0.0.1",
+  "publisher": "everest-architecture",
   "engines": {
     "vscode": "^1.49.0"
   },
@@ -35,7 +35,7 @@
       "interview": [
         {
           "id": "interview",
-          "name": "前端每日面试题"
+          "name": "前端每日一题"
         }
       ]
     },
@@ -43,7 +43,7 @@
       "activitybar": [
         {
           "id": "interview",
-          "title": "前端每日面试题",
+          "title": "前端每日一题",
           "icon": "media/interview.svg"
         }
       ]
