--- a/package.json
+++ b/package.json
@@ -1,144 +1,161 @@
 {
-  "name": "front-end-daily-question",
-  "displayName": "前端每日一题",
-  "description": "A vscode extension for frontEnd Interviewer",
-  "version": "1.0.1",
-  "publisher": "everest-architecture",
-  "engines": {
-    "vscode": "^1.49.0"
-  },
-  "categories": [
-    "Other"
-  ],
-  "activationEvents": [
-    "onView:interview"
-  ],
-  "main": "./out/extension.js",
-  "contributes": {
-    "menus": {
-      "view/title": [
-        {
-          "command": "zffe.login",
-          "when": "view == interview",
-          "group": "navigation"
-        },
-        {
-          "command": "interview.refresh",
-          "when": "view == interview",
-          "group": "navigation"
-        }
-      ],
-      "view/item/context": [
-        {
-          "command": "interview.openAnswerByInline",
-          "when": "view == interview",          
-          "group": "inline"
-        }
-      ]
-    },
-    "views": {
-      "interview": [
-        {
-          "id": "interview",
-          "name": "前端每日一题"
-        }
-      ]
-    },
-    "viewsContainers": {
-      "activitybar": [
-        {
-          "id": "interview",
-          "title": "前端每日一题",
-          "icon": "media/interview.svg"
-        }
-      ]
-    },
-    "viewsWelcome": [
-      {
-        "view": "interview",
-        "contents": "loading..."
-      }
-    ],
-    "commands": [
-      {
-        "command": "interview.refresh",
-        "title": "Refresh",
-        "icon": {
-          "light": "media/light/refresh.svg",
-          "dark": "media/dark/refresh.svg"
-        }
-      },
-      {
-        "command": "interview.openAnswerByInline",
-        "title": "题解"
-      },
-      {
-        "command": "zffe.login",
-        "title": "登录",
-        "icon": {
-          "light": "media/light/login.svg",
-          "dark": "media/dark/login.svg"
-        }
-      }
-    ],
-    "configuration": [
-      {
-        "title": "interview",
-        "properties": {
-          "interview.workspaceFolder": {
-            "type": "string",
-            "scope": "application",
-            "description": "The path of the workspace folder to store the problem files.",
-            "default": ""
-          }
-        },
-        "interview.editor.shortcuts": {
-          "type": "array",
-          "default": [
-            "提交答案",
-            "查看题解"
-          ],
-          "scope": "application",
-          "items": {
-            "type": "string",
-            "enum": [
-              "提交答案",
-              "查看题解"
-            ],
-            "enumDescriptions": [
-              "Submit your answer.",
-              "Show other answers."
-            ]
-          },
-          "description": "Customize the shorcuts in editors."
-        }
-      }
-    ]
-  },
-  "scripts": {
-    "vscode:prepublish": "yarn run compile",
-    "compile": "tsc -p ./",
-    "lint": "eslint src --ext ts",
-    "watch": "tsc -watch -p ./",
-    "pretest": "yarn run compile && yarn run lint",
-    "test": "node ./out/test/runTest.js"
-  },
-  "devDependencies": {
-    "@types/fs-extra": "^9.0.1",
-    "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.0.0",
-    "@types/node": "^12.11.7",
-    "@types/vscode": "^1.49.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
-    "eslint": "^7.9.0",
-    "glob": "^7.1.6",
-    "mocha": "^8.1.3",
-    "typescript": "^4.0.2",
-    "vscode-test": "^1.4.0"
-  },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "fs-extra": "^9.0.1"
-  }
+	"name": "front-end-daily-question",
+	"displayName": "前端每日一题",
+	"description": "A vscode extension for frontEnd Interviewer",
+	"version": "1.0.1",
+	"publisher": "everest-architecture",
+	"engines": {
+		"vscode": "^1.49.0"
+	},
+	"categories": [
+		"Other"
+	],
+	"activationEvents": [
+		"onView:interview"
+	],
+	"main": "./out/extension.js",
+	"contributes": {
+		"menus": {
+			"view/title": [
+				{
+					"command": "zffe.login",
+					"when": "view == interview",
+					"group": "navigation"
+				},
+				{
+					"command": "interview.refresh",
+					"when": "view == interview",
+					"group": "navigation"
+				}
+			],
+			"view/item/context": [
+				{
+					"command": "interview.openAnswerByInline",
+					"when": "view == interview",
+					"group": "inline"
+				}
+			]
+		},
+		"views": {
+			"interview": [
+				{
+					"id": "interview",
+					"name": "前端每日一题"
+				}
+			]
+		},
+		"viewsContainers": {
+			"activitybar": [
+				{
+					"id": "interview",
+					"title": "前端每日一题",
+					"icon": "media/interview.svg"
+				}
+			]
+		},
+		"viewsWelcome": [
+			{
+				"view": "interview",
+				"contents": "loading..."
+			}
+		],
+		"commands": [
+			{
+				"command": "interview.refresh",
+				"title": "Refresh",
+				"icon": {
+					"light": "media/light/refresh.svg",
+					"dark": "media/dark/refresh.svg"
+				}
+			},
+			{
+				"command": "interview.openAnswerByInline",
+				"title": "题解"
+			},
+			{
+				"command": "zffe.login",
+				"title": "登录",
+				"icon": {
+					"light": "media/light/login.svg",
+					"dark": "media/dark/login.svg"
+				}
+			}
+		],
+		"configuration": [
+			{
+				"title": "interview",
+				"properties": {
+					"interview.workspaceFolder": {
+						"type": "string",
+						"scope": "application",
+						"description": "The path of the workspace folder to store the problem files.",
+						"default": ""
+					}
+				},
+				"interview.editor.shortcuts": {
+					"type": "array",
+					"default": [
+						"提交答案",
+						"查看题解"
+					],
+					"scope": "application",
+					"items": {
+						"type": "string",
+						"enum": [
+							"提交答案",
+							"查看题解"
+						],
+						"enumDescriptions": [
+							"Submit your answer.",
+							"Show other answers."
+						]
+					},
+					"description": "Customize the shorcuts in editors."
+				}
+			}
+		]
+	},
+	"scripts": {
+		"vscode:prepublish": "yarn run compile",
+		"compile": "tsc -p ./",
+		"lint": "eslint src --ext ts",
+		"watch": "tsc -watch -p ./",
+		"pretest": "yarn run compile && yarn run lint",
+		"test": "node ./out/test/runTest.js"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^11.0.0",
+		"@commitlint/config-conventional": "^11.0.0",
+		"@types/fs-extra": "^9.0.1",
+		"@types/glob": "^7.1.3",
+		"@types/mocha": "^8.0.0",
+		"@types/node": "^12.11.7",
+		"@types/vscode": "^1.49.0",
+		"@typescript-eslint/eslint-plugin": "^4.1.1",
+		"@typescript-eslint/parser": "^4.1.1",
+		"eslint": "^7.9.0",
+		"glob": "^7.1.6",
+		"husky": "^4.3.6",
+		"lint-staged": "^10.5.3",
+		"mocha": "^8.1.3",
+		"prettier": "^2.2.1",
+		"typescript": "^4.0.2",
+		"vscode-test": "^1.4.0"
+	},
+	"dependencies": {
+		"axios": "^0.21.1",
+		"fs-extra": "^9.0.1"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
+		}
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx,css,less,md,json}": [
+			"npx prettier --write ./src",
+			"git add ."
+		]
+	}
 }
